# Zashiki-warasi

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_email_analyses.py  0003_analysis_v2.py  0004_expenses.py  0005_expenses_notion.py  0006_expenses_title.py
src/zashiki_warasi/: __init__.py  app.py
src/zashiki_warasi/agents/: base.py  email_agent.py  llm.py
src/zashiki_warasi/agents/tools/: __init__.py  registry.py
src/zashiki_warasi/agents/verticals/: expense.py  pdf.py
src/zashiki_warasi/core/: config.py  db.py  models.py  schemas.py
src/zashiki_warasi/gmail/: auth.py  client.py  exceptions.py  poller.py
src/zashiki_warasi/notifications/: notion.py  telegram.py
tests/: test_app.py
tests/agents/: test_email_agent.py  test_llm.py
tests/agents/tools/: test_registry.py
tests/agents/verticals/: test_expense.py  test_pdf.py
tests/core/: test_config.py  test_db.py  test_schemas.py
tests/gmail/: test_auth.py  test_client_api.py  test_client_parsing.py  test_poller.py
tests/notifications/: test_notion.py  test_telegram.py
