[project]
name = "zashiki-warasi"
version = "0.1.0"
description = "AI agent toolkit with a Gmail polling email agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "langgraph>=1.2.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
zashiki-warasi = "zashiki_warasi.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zashiki_warasi"]
