[project]
name = "zashiki-warasi"
version = "0.1.0"
description = "AI agent toolkit with a Gmail polling email agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pdfplumber>=0.11.10",
    "psycopg[binary]>=3.2,<3.3",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
]

[project.scripts]
zashiki-warasi = "zashiki_warasi.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zashiki_warasi"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
